fixed overflow in body

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ html {
 
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 
 ol,
