--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -103,6 +103,7 @@ html {
 }
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 ol,
 ul {
